--- a/static/css-modify/index.sass
+++ b/static/css-modify/index.sass
@@ -14,14 +14,14 @@ body {
   section.title {
     position:absolute;
     width:100%;
-    height:36.8%;
+    height:39.8%;
   }
   section.body {
     position:absolute;
     float:left;
     width:100%;
     height:40%;
-    top:36.8%;
+    top:39.8%;
   }
   .six-month-logo {
     margin-top:4.73%;
@@ -53,10 +53,19 @@ body {
         height:100%;
       }
     }
+    > .line {
+      position:absolute;
+      border-bottom:2px solid #c4017d;
+      height:0px;
+      background:-webkit-linear-gradient(top,rgba(255,255,255,0.5),rgba(255,122,187,0.5));
+      top:0;
+      left:50%;
+    }
   }
   .finger-instruction {
+    margin-top:3%;
     > span {
-      font-size:3.3vw;
+      font-size:3.4vw;
       color:#fff;
       background:#ff7abb;
       padding:2px;
@@ -69,12 +78,12 @@ body {
     font-family:second;
   }
   .win-text-second {
-    font-size:3.3vw;
+    font-size:2.9vw;
     color:#d34f9a;
     font-family:second;
   }
   .win-text-third {
-    font-size:4.4vw;
+    font-size:4.2vw;
     color:#d34f9a;
     font-family:second;
   }
@@ -105,5 +114,23 @@ body {
     bottom:3%;
     z-index:100;
     right:8.9%;
+  }
+  .instruction {
+    position:absolute;
+    height:100%;
+    width:100%; 
+    z-index:101;
+    display:none;
+    background:rgba(0,0,0,0.8);
+    .instruction-img {
+      height:90%;
+      margin-top:7%;
+    }
+    .instruction-close {
+      width:10%;
+      margin-left:-6%;
+      margin-top:21%;
+      position:absolute;
+    }
   }
 }
