--- a/templates/jade/index.jade
+++ b/templates/jade/index.jade
@@ -15,6 +15,7 @@ body
 			a.finger-area
 				img.finger-image(src="{{ STATIC_URL }}image/finger.png")
 			div(class="line")=""
+			div(class="touch-div")=""
 		div.finger-instruction
 			span 按下手印 加入行动
 		div.win-text-first
