--- a/templates/jade/lib/header.jade
+++ b/templates/jade/lib/header.jade
@@ -2,5 +2,5 @@ doctype html
 html(lang="en")
 	head
 		title= "让妈妈变美"
-		meta(name="viewport",content="height=device-height,width=device-width,initial-scale=1")
+		meta(name="viewport",content="height=device-height,width=device-width,user-scalable=no")
 
