--- a/assets/css-modify/index.sass
+++ b/assets/css-modify/index.sass
@@ -56,8 +56,12 @@ body {
     > .line {
       position:absolute;
       border-bottom:2px solid #c4017d;
-      height:0px;
       background:-webkit-linear-gradient(top,rgba(255,255,255,0.5),rgba(255,122,187,0.5));
+      top:0;
+      left:50%;
+    }
+    > .touch-div {
+      position:absolute;
       top:0;
       left:50%;
     }
