--- a/assets/css-modify/index.sass
+++ b/assets/css-modify/index.sass
@@ -133,7 +133,7 @@ body {
     .instruction-close {
       width:10%;
       margin-left:-6%;
-      margin-top:21%;
+      top:7%;
       position:absolute;
     }
   }
