--- a/templates/jade/index.jade
+++ b/templates/jade/index.jade
@@ -33,6 +33,6 @@ body
 	div.instruction
 		img(src="{{ STATIC_URL }}image/instruction.png",class="instruction-img")
 		img(src="{{ STATIC_URL }}image/instruction-close.png",class="instruction-close")
-
+script(language="javascript",src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js")
 script(language="javascript",src="{{ STATIC_URL }}js/index.min.js")
 
