--- a/assets/css-modify/bonus.sass
+++ b/assets/css-modify/bonus.sass
@@ -35,6 +35,30 @@
     width:80%;
   }
 }
+#submit-success {
+  background:rgba(0,0,0,0.8);
+  position:absolute;
+  height:100%;
+  width:100%;
+  display:none;
+  .background {
+    width:100%;
+    height:80%;
+    bottom:0;
+    position:absolute;
+    .title {
+      width:80%;
+    }
+  }
+  .button {
+    position:absolute;
+    width:100%;
+    margin-top:-17%; 
+    img {
+      width:40%;
+    }
+  }
+}
 body {
   background:#ffe7e7;
   font-family:first;
@@ -63,6 +87,17 @@ body {
     p {
       font-size:7.6vw;
       color:#c4017d;
+    }
+    span.num {
+      font-family:second;
+      color:#fff;
+      background:#c4017d;
+      padding-left:10px;
+      padding-right:10px;
+      padding-top:2px;
+      font-size:6.8vw;
+      border-radius:3px;
+      padding-bottom:2px;
     }
   }
   .join-in-second {
