--- a/assets/css-modify/index.sass
+++ b/assets/css-modify/index.sass
@@ -1,11 +1,11 @@
 @import "../../bower_components/normalize.css/normalize.css";
 @font-face {
   font-family:first;
-  src:url('FZQKBYSJW.TTF');
+  src:url('first.ttf');
 }
 @font-face {
   font-family:second;
-  src:url('FZLTXIHJW.TTF');
+  src:url('second.ttf');
 }
 body {
   background:#ffe7e7;
