--- a/assets/css-modify/bonus.sass
+++ b/assets/css-modify/bonus.sass
@@ -63,6 +63,9 @@ body {
   background:#ffe7e7;
   font-family:first;
   text-align:center;
+  height:100%;
+  width:100%;
+  position:absolute;
   p {
     margin:0;
   }
