--- a/assets/css-modify/index.sass
+++ b/assets/css-modify/index.sass
@@ -11,6 +11,7 @@ body {
   background:#ffe7e7;
   font-family:first;
   text-align:center;
+  height:100%;
   section.title {
     position:absolute;
     width:100%;
