--- a/templates/jade/lib/header.jade
+++ b/templates/jade/lib/header.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	head
-		title= "让妈妈变美"
+		title= "和妈妈一起美丽下厨"
 		meta(name="viewport",content="height=device-height,width=device-width,user-scalable=no")
 		script(type='text/javascript').
 			var _hmt = _hmt || [];(function() {var hm = document.createElement("script");hm.src = "//hm.baidu.com/hm.js?9259921e9b5b8723b697038282b1a964";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();
