--- a/assets/css-modify/bonus.sass
+++ b/assets/css-modify/bonus.sass
@@ -24,6 +24,8 @@
   background:rgba(0,0,0,0.8);
   position:absolute;
   display:none;
+  top:0;
+  left:0;
   height:100%;
   width:100%;
   z-index:200;
