--- a/assets/css-modify/bonus.sass
+++ b/assets/css-modify/bonus.sass
@@ -66,6 +66,8 @@ body {
   font-family:first;
   text-align:center;
   height:100%;
+  -webkit-touch-callout:none ;
+      -webkit-user-select:none ;
   width:100%;
   position:absolute;
   p {
