--- a/assets/css-modify/index.sass
+++ b/assets/css-modify/index.sass
@@ -15,6 +15,8 @@ body {
   font-family:first;
   text-align:center;
   height:100%;
+  -webkit-touch-callout:none ;
+  -webkit-user-select:none ;
   section.title {
     position:absolute;
     width:100%;
