--- a/templates/jade/bonus.jade
+++ b/templates/jade/bonus.jade
@@ -22,7 +22,7 @@ body
 			div.second
 				p.text-center {% if prize == 'first' %}获得六月鲜新年礼包{% elif prize == 'second' %}获得六月鲜特技淡盐酱油{% else %}就能为妈妈赢取{% endif %}
 			div.third
-				p.text-center {% if prize == 'first' %}为妈妈送出健康{% elif prize == 'second' %}为妈妈制造一份清咸{% else %}六月鲜新年礼包{% endif %}
+				p.text-center {% if prize == 'first' %}为妈妈送出健康{% elif prize == 'second' %}为妈妈制造一份轻咸{% else %}六月鲜新年礼包{% endif %}
 			div.fourth
 				p.text-center {% if prize == 'first' %}美丽的新年祝福{% elif prize == 'second' %}让妈妈与健康相伴{% else %}再一次加入行动吧{% endif %}
 	section.footer
