--- a/assets/css-modify/bonus.sass
+++ b/assets/css-modify/bonus.sass
@@ -187,7 +187,7 @@ body {
       color:#ce2a90;
       border:8px solid #a4086b;
       border-radius:10vw;
-      font-family:first;
+      font-family:second;
       width:81.5%;
       font-size:3.7vw;
       left:8.25%;
@@ -205,7 +205,7 @@ body {
       input {
         background:#fcdddd;
         border:1px solid #f3cfcf;
-        height:35px;
+        height:30px;
       }
       .inline {
         float:left;
