--- a/assets/css-modify/bonus.sass
+++ b/assets/css-modify/bonus.sass
@@ -197,7 +197,7 @@ body {
         margin-top:-20%;
       }
       .little-input {
-        width:7%;
+        width:9%;
       }
       .middle-input {
         width:100%;
@@ -215,7 +215,7 @@ body {
         }
       }
       .detail-area {
-        max-width:87%;
+        max-width:79%;
       }
 
       .inline-detail {
@@ -229,7 +229,7 @@ body {
       }
       .tip-text {
         width:30%;
-        line-height:200%;
+        line-height:32px;
       }
       .name .inline {
         letter-spacing:0.2vw;
