--- a/templates/jade/bonus.jade
+++ b/templates/jade/bonus.jade
@@ -20,7 +20,7 @@ body
 			div.first
 				p.text-center {% if prize == 'first' %}恭喜您{% elif prize == 'second' %}恭喜您{% else %}还差一点{% endif %}
 			div.second
-				p.text-center {% if prize == 'first' %}获得六月鲜新年礼包{% elif prize == 'second' %}获得六月鲜特技淡盐酱油{% else %}就能为妈妈赢取{% endif %}
+				p.text-center {% if prize == 'first' %}获得六月鲜新年礼包{% elif prize == 'second' %}获得六月鲜特级淡盐酱油{% else %}就能为妈妈赢取{% endif %}
 			div.third
 				p.text-center {% if prize == 'first' %}为妈妈送出健康{% elif prize == 'second' %}为妈妈制造一份轻咸{% else %}六月鲜新年礼包{% endif %}
 			div.fourth
