--- a/static/css-modify/index.sass
+++ b/static/css-modify/index.sass
@@ -1,140 +1,6 @@
 @import "../../bower_components/normalize.css/normalize.css";
-@font-face {
-  font-family:first;
-  src:url('first.ttf');
-}
-@font-face {
-  font-family:second;
-  src:url('second.ttf');
-}
+
 body {
-  background:#ffe7e7;
-  font-family:first;
-  text-align:center;
-  section.title {
-    position:absolute;
-    width:100%;
-    height:39.8%;
-  }
-  section.body {
-    position:absolute;
-    float:left;
-    width:100%;
-    height:40%;
-    top:39.8%;
-  }
-  .six-month-logo {
-    margin-top:4.73%;
-    width:14%;
-  }
-  .text-center {
-    text-align:center;
-    margin:0;
-  }
-  .this-year > p {
-    color:#ff7abb;
-    font-size:6.9vw;
-    margin-top:2.8%;
-  }
-  .give-mom-best > p {
-    color:#ff7abb;
-    font-size:4.2vw;
-    margin-bottom:3%;
-  }
-  .with-mom > p {
-    color:#c4017d;
-    font-size:11.5vw;
-  }
-  .finger {
-    height:50%;
-    width:100%;
-    > .finger-area {
-      img {
-        height:100%;
-      }
-    }
-    > .line {
-      position:absolute;
-      border-bottom:2px solid #c4017d;
-      background:-webkit-linear-gradient(top,rgba(255,255,255,0.5),rgba(255,122,187,0.5));
-      top:0;
-      left:50%;
-    }
-    > .touch-div {
-      position:absolute;
-      top:0;
-      left:50%;
-    }
-  }
-  .finger-instruction {
-    margin-top:3%;
-    > span {
-      font-size:3.4vw;
-      color:#fff;
-      background:#ff7abb;
-      padding:2px;
-      font-family:second;
-    }
-  }
-  .win-text-first {
-    font-size:3.8vw;
-    color:#d34f9a;
-    font-family:second;
-  }
-  .win-text-second {
-    font-size:2.9vw;
-    color:#d34f9a;
-    font-family:second;
-  }
-  .win-text-third {
-    font-size:4.2vw;
-    color:#d34f9a;
-    font-family:second;
-  }
-  .bottom-color {
-    height:15%;
-    position:absolute;
-    bottom:0;
-    background:#a23179;
-    width:100%;
-  }
-  .girl-and-woman {
-    width:29.3%;
-    left:3%;
-    position:absolute;
-    bottom:0;
-    z-index:100;
-  }
-  .instruction-btn {
-    width:27.4%;
-    position:absolute;
-    bottom:4.2%;
-    z-index:100;
-    left:35.9%;
-  }
-  .soy-bottle {
-    width:17.1%;
-    position:absolute;
-    bottom:3%;
-    z-index:100;
-    right:8.9%;
-  }
-  .instruction {
-    position:absolute;
-    height:100%;
-    width:100%; 
-    z-index:101;
-    display:none;
-    background:rgba(0,0,0,0.8);
-    .instruction-img {
-      height:90%;
-      margin-top:7%;
-    }
-    .instruction-close {
-      width:10%;
-      margin-left:-6%;
-      top:7%;
-      position:absolute;
-    }
-  }
+  background:url("../image/index_background.jpg") no-repeat;
+  background-size:cover;
 }
