--- a/assets/css-modify/index.sass
+++ b/assets/css-modify/index.sass
@@ -1,146 +1,68 @@
 @import "../../bower_components/normalize.css/normalize.css";
-@font-face {
-  font-family:first;
-  src:url('second.ttf');
-}
-@font-face {
-  font-family:second;
-  src:url('first.ttf');
-}
-html {
-  height: 100%;
-}
+
 body {
-  background:#ffe7e7;
-  font-family:first;
-  text-align:center;
-  height:100%;
-  -webkit-touch-callout:none ;
-  -webkit-user-select:none ;
+  background:url("../image/index_background.jpg") no-repeat;
+  background-size:cover;
+  background-color:rgb(176,204,0);
+
   section.title {
     position:absolute;
+    height:20%;
     width:100%;
-    height:37.8%;
+    div {
+      width:100%;
+    }
+    #logo {
+      margin-top:2.25%;
+      width:21%;
+      margin-left:2%;
+    }
   }
-  section.body {
-    position:absolute;
-    float:left;
-    width:100%;
-    height:40%;
-    top:37.8%;
-  }
-  .six-month-logo {
-    margin-top:4.73%;
-    width:14%;
-  }
-  .text-center {
+  section.middle {
     text-align:center;
-    margin:0;
-  }
-  .this-year > p {
-    color:#ff7abb;
-    font-size:5.3vw;
-    margin-top:2.8%;
-  }
-  .give-mom-best > p {
-    color:#ff7abb;
-    font-size:4.2vw;
-    margin-bottom:3%;
-  }
-  .with-mom > p {
-    color:#c4017d;
-    font-size:9.5vw;
-  }
-  .finger {
-    height:50%;
+    position:absolute;
+    top:25%;
     width:100%;
-    > .finger-area {
-      img {
-        height:100%;
+    .bag {
+      max-width:100%;
+    }
+    .map {
+      width:90%;
+    }
+    .roo {
+      position:absolute;
+      left:5%;
+      height:28%;
+      z-index:10;
+    }
+    .finger {
+      width:100%;
+      position:absolute;
+      top:30%;
+    }
+    .finger-center {
+      width:20%;
+    }
+  }
+  section.footer {
+    width:100%;
+    bottom:0;
+    position:absolute;
+    .btn-bar {
+      width:100%;
+      .btn-line {
+        width:100%;
+        text-align:center;
+        a img {
+          width:50%;
+          
+        }
+      }
+      .message {
+        width:100%;
+        height:10%;
       }
     }
-    > .line {
-      position:absolute;
-      border-bottom:2px solid #c4017d;
-      background:-webkit-linear-gradient(top,rgba(255,255,255,0.5),rgba(255,122,187,0.5));
-      top:0;
-      left:50%;
-    }
-    > .touch-div {
-      position:absolute;
-      top:0;
-      left:50%;
-    }
-  }
-  .finger-instruction {
-    margin-top:3%;
-    > span {
-      font-size:3.4vw;
-      color:#fff;
-      background:#ff7abb;
-      padding:2px;
-      font-family:second;
-    }
-  }
-  .win-text-first {
-    font-size:3.8vw;
-    color:#d34f9a;
-    font-family:second;
-  }
-  .win-text-second {
-    font-size:2.9vw;
-    color:#d34f9a;
-    font-family:second;
-  }
-  .win-text-third {
-    font-size:4.2vw;
-    color:#d34f9a;
-    font-family:second;
-  }
-  .bottom-color {
-    height:15%;
-    position:absolute;
-    bottom:0;
-    background:#a23179;
-    width:100%;
-  }
-  .girl-and-woman {
-    width:29.3%;
-    left:3%;
-    position:absolute;
-    bottom:0;
-    z-index:100;
-  }
-  .instruction-btn {
-    width:27.4%;
-    position:absolute;
-    bottom:4.2%;
-    z-index:100;
-    left:35.9%;
-  }
-  .soy-bottle {
-    width:17.1%;
-    position:absolute;
-    bottom:3%;
-    z-index:100;
-    right:8.9%;
-  }
-  .instruction {
-    position:absolute;
-    height:100%;
-    width:100%; 
-    z-index:101;
-    display:none;
-    background:rgba(0,0,0,0.8);
-    .instruction-img {
-      height:90%;
-      margin-top:7%;
-    }
-    .instruction-close {
-      width:10%;
-      margin-left:-6%;
-      top:7%;
-      position:absolute;
-    }
+
   }
 }
