--- a/templates/jade/lib/header.jade
+++ b/templates/jade/lib/header.jade
@@ -1,9 +1,6 @@
 doctype html
 html(lang="en")
 	head
-		title= "和妈妈一起美丽下厨"
+		title= "爱学贷"
 		meta(name="viewport",content="width=device-width,user-scalable=no,user-scalable=0,inital-scale=1.0")
-		script(type='text/javascript').
-			var _hmt = _hmt || [];(function() {var hm = document.createElement("script");hm.src = "//hm.baidu.com/hm.js?9259921e9b5b8723b697038282b1a964";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();
-
 
