--- a/assets/css-modify/index.sass
+++ b/assets/css-modify/index.sass
@@ -75,8 +75,8 @@ body {
   -webkit-tap-highlight-color:rgba(0,0,0,0);
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   background:url("../image/index_background.jpg") no-repeat;
-  background-size:cover;
-  background-color:rgb(176,204,0);
+  background-size:100vw 100vh;
+  background-color:rgb(13,30,64);
   section.title {
     position:absolute;
     height:20%;
@@ -92,12 +92,6 @@ body {
         font-size:4vw;
         font-weight:500;
       }
-    #logo {
-      margin-top:2.25%;
-      width:21%;
-      margin-left:2%;
-
-    }
   }
   section.middle {
     text-align:center;
