--- a/assets/css-modify/index.sass
+++ b/assets/css-modify/index.sass
@@ -84,14 +84,14 @@ body {
     div {
       width:100%;
     }
-      .cal {
-        color:#b89d60;
-        position:absolute;
-        right:0;
-        top:10%;
-        font-size:4vw;
-        font-weight:500;
-      }
+    .cal {
+      color:#b89d60;
+      position:absolute;
+      right:15%;
+      top:15%;
+      font-size:4vw;
+      font-weight:500;
+    }
   }
   section.middle {
     text-align:center;
