--- a/static/css-modify/index.sass
+++ b/static/css-modify/index.sass
@@ -75,8 +75,8 @@ body {
   -webkit-tap-highlight-color:rgba(0,0,0,0);
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   background:url("../image/index_background.jpg") no-repeat;
-  background-size:cover;
-  background-color:rgb(176,204,0);
+  background-size:100vw 100vh;
+  background-color:rgb(13,30,64);
   section.title {
     position:absolute;
     height:20%;
@@ -84,19 +84,13 @@ body {
     div {
       width:100%;
     }
-      .cal {
-        color:#b89d60;
-        position:absolute;
-        right:0;
-        top:10%;
-        font-size:4vw;
-        font-weight:500;
-      }
-    #logo {
-      margin-top:2.25%;
-      width:21%;
-      margin-left:2%;
-
+    .cal {
+      color:#b89d60;
+      position:absolute;
+      right:15%;
+      top:15%;
+      font-size:4vw;
+      font-weight:500;
     }
   }
   section.middle {
@@ -116,7 +110,7 @@ body {
     .roo {
       position:absolute;
       left:10%;
-      height:74px;
+      height:61px;
       z-index:8;
     }
     .finger {
